# cuda-lbvh

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
python/: benchmark.py.in
src/: CMakeLists.txt  build.cu  build.h  bvh.h  camera.h  cub_helper.cu  cub_helper.h  cuda_check.h  main.cpp  obj_reader.cpp  obj_reader.h  trace.cu  trace.h  util.cuh  util.h  vec_math_helper.h
